#2 Add solution for VSTO

--- a/Rumors.OutlookClassicAddIn/appsettings.json
+++ b/Rumors.OutlookClassicAddIn/appsettings.json
@@ -12,7 +12,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "%localappdata%\\Rumors\\Logs\\Outlook\\log-outlook-.txt",
+          "path": "%localappdata%\\Rumors\\Logs\\OutlookAgent\\log-outlook-.txt",
           "rollingInterval": "Day",
           "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] {Message:lj}{NewLine}{Exception}"
         }
