--- a/Rumors.OutlookClassicAddIn/packages.config
+++ b/Rumors.OutlookClassicAddIn/packages.config
@@ -1,21 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Binder" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.FileExtensions" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Json" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="9.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="9.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyModel" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.FileProviders.Abstractions" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.FileProviders.Physical" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.FileSystemGlobbing" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Primitives" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="9.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="9.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="9.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="9.0.0" targetFramework="net472" />
   <package id="Serilog" version="3.1.1" targetFramework="net472" />
+  <package id="Serilog.Extensions.Logging" version="8.0.0" targetFramework="net472" />
   <package id="Serilog.Settings.Configuration" version="8.0.0" targetFramework="net472" />
   <package id="Serilog.Sinks.File" version="5.0.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
-  <package id="System.Diagnostics.DiagnosticSource" version="7.0.2" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="9.0.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
