--- a/Rumors.OutlookClassicAddIn/Rumors.OutlookClassicAddIn.csproj
+++ b/Rumors.OutlookClassicAddIn/Rumors.OutlookClassicAddIn.csproj
@@ -306,9 +306,12 @@
   -->
   <ItemGroup>
     <Compile Include="emailLogic\ConversationUtils.cs" />
+    <Compile Include="emailLogic\EmailSearch.cs" />
     <Compile Include="emailLogic\EmailUtils.cs" />
+    <Compile Include="emailLogic\SearchFilter.cs" />
     <Compile Include="emailLogic\ToDtoConverter.cs" />
     <Compile Include="etc\EmailTaskPaneStatus.cs" />
+    <Compile Include="MessageHandlers\SearchMessageHandler.cs" />
     <Compile Include="MessageHandlers\ToolMessageHandler.cs" />
     <Compile Include="Panes\BasePaneUserControl.cs">
       <SubType>UserControl</SubType>
