#7 add GetConversationMessage and Hanlder

--- a/Rumors.OutlookClassicAddIn/Rumors.OutlookClassicAddIn.csproj
+++ b/Rumors.OutlookClassicAddIn/Rumors.OutlookClassicAddIn.csproj
@@ -311,6 +311,7 @@
     <Compile Include="emailLogic\SearchFilter.cs" />
     <Compile Include="emailLogic\ToDtoConverter.cs" />
     <Compile Include="etc\EmailTaskPaneStatus.cs" />
+    <Compile Include="MessageHandlers\GetConversationMessageHandler.cs" />
     <Compile Include="MessageHandlers\SearchMessageHandler.cs" />
     <Compile Include="MessageHandlers\ToolMessageHandler.cs" />
     <Compile Include="Panes\BasePaneUserControl.cs">
