Refactor Playground. Use existed assistant

--- a/Rumors.Desktop/appsettings.json
+++ b/Rumors.Desktop/appsettings.json
@@ -23,7 +23,7 @@
       }
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
-  }
-
+  },
+  "OpenAiAgentName": "asst_2ShRzKmGQeOr7IbWodvTnL6r"
 }
 
